--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,46 @@
-.App {
+html, body, #root, #router, #side-bar, .main-section {
+  height: 100%;
+  font-family: 'News Cycle', sans-serif;
+}
+
+#side-bar {
+  color: #ECEFF1;
+  /*background: #607D8B;*/
+  background: #00838F;
+  padding-top: 20px;
+}
+
+.main-section {
+  padding-left: 20px;
+}
+
+#brand {
+  font-family: 'Righteous', cursive;
+  font-size: 4em;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#description {
+  font-size: 1.5em;
+  font-style: italic;
+  padding-bottom: 30px;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.link {
+  display: inline;
+  color: inherit;
+  font-size: 1.5em;
+  text-align: center;
 }
 
-.App-intro {
-  font-size: large;
+.blog {
+  height: 100%;
+  padding: 0;
+  overflow-y: scroll;
+   -webkit-overflow-scrolling: touch;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+iframe {
+  border: 0;
 }
