--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,16 @@ html, body, #root, #router, #side-bar, .main-section {
   font-family: 'News Cycle', sans-serif;
 }
 
+@media (max-width: 768px) {
+  html, body, #root, #router, #side-bar, .main-section {
+    width: 100%;
+  }
+
+  #landing h1 {
+    text-align: center;
+  }
+}
+
 #side-bar {
   text-align: center;
 }
@@ -53,7 +63,7 @@ html, body, #root, #router, #side-bar, .main-section {
 }
 
 #landing {
-  padding-left: 10%;
+  padding-left: 20px;
   background-image: url('./images/LandingWallpaper.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -63,7 +73,7 @@ html, body, #root, #router, #side-bar, .main-section {
 
 #landing-content h1 {
   color: white;
-  font-size: 5em;
+  font-size: 4em;
   text-shadow: 5px 5px 5px #000;
 }
 
@@ -90,3 +100,4 @@ html, body, #root, #router, #side-bar, .main-section {
   padding: 10px 10px;
   cursor: pointer;
 }
+
