--- a/src/App.css
+++ b/src/App.css
@@ -278,17 +278,18 @@ input.form-control, text-area.form-control {
 }
 
 .form-group {
-  padding: 20 0;
+  padding: 0 0;
 }
 
 .form-control {
   font-size: 1.2em;
   font-weight: 700;
   height: auto;
+  border-width: 3px;
 }
 
 textarea.form-control {
-  height: 225px;
+  height: 237px;
 }
 
 .submit-btn, .submit-btn:focus {
@@ -300,4 +301,18 @@ textarea.form-control {
 .submit-btn:hover {
   color: #4FC3F7;
   outline: none;
+}
+
+.error {
+  border-color: #a94442;
+}
+
+.warnings p {
+  font-size: 1.2em;
+  text-align: left;
+}
+
+#warning-sign {
+  font-size: 1.4em;
+  font-weight: 700;
 }
