--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ html, body, #root, #router, #side-bar, .main-section {
   overflow: auto;
   background: #ECEFF1;
   padding: 0;
+  padding-bottom: 40px;
 }
 
 .center-vertical-parent {
