--- a/src/App.css
+++ b/src/App.css
@@ -319,7 +319,7 @@ textarea.form-control {
 }
 
 #video-player {
-  overflow: auto;
+  overflow: hidden;
   padding-top: 20px;
   padding-left: 0;
 }
