added 99.co as new job. removed operator from portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -251,6 +251,7 @@ html, body, #root, #router, #side-bar, .main-section {
   position: relative;
   overflow: hidden;
   margin: 0 auto;
+  max-height: 256px;
 }
 
 .portfolio-link img {
