--- a/src/App.css
+++ b/src/App.css
@@ -216,20 +216,24 @@ html, body, #root, #router, #side-bar, .main-section {
 .work-img {
   border: 0;
   background-color: inherit;
-  max-height: 140px;
 }
 
 .work-company {
   font-size: 3.5vh;
+  font-weight: bold;
 }
 
 .work-title {
   color: #00BCD4;
-  font-size: 3vh;
+  font-size: 3.5vh;
+}
+
+.work-tools {
+  font-size: 2.5vh;
 }
 
 .work-duration {
-  font-size: 2.5vh;
+  font-size: 3vh;
 }
 
 .portfolio-img {
@@ -326,7 +330,7 @@ textarea.form-control {
 }
 
 .vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
 }
